@@ -36,6 +36,7 @@
 - added: usage of currency formatter `Number.currency(currency)`
 - added: new schema type `Number2` with default value is `null`, not zero `0`
 - added: `@{json2(model, elementID, key1, key2, key3)}` can serialize data with keys defined into the `<script type="application/json">`
+- added: schemas supports `PATCH` and `.setPatch()`, only specified field are processed
 
 - updated: `$.invalid()` without arguments can return a function `function(err)`
 - updated: Mail `unsubscribe` appends new header which enables `unsubscribe` in e.g. iOS
